# Code-gather

./: .cgtignore  .gitignore  CMakeLists.txt  README.md  build.bat  cgt-result.txt  text.txt
docs/: MANIFEST.txt  architecture.md
include/app/: AppRunner.h  AppUtils.h  CoreConstant.h  CoreRunner.h  TemplateRunner.h
include/app/coreRunner/: CoreBuildTree.h  CoreConfirmer.h  CoreConstants.h  CoreDetectedPanel.h  CoreInput.h  CoreInputPanel.h  CoreSelectedPanel.h  CoreSelectionInput.h  CoreSelectionUi.h  CoreSelector.h  CoreTreeRender.h  CoreUtils.h  PrintCoreResult.h  TreeBuilder.h
include/cli/: ArgParser.h  ParsedArgs.h
include/config/: Config.h  ConfigIgnoreHelpers.h  ConfigParserHelpers.h  ConfigState.h  Defaults.h
include/filter/: Filter.h  FilterMatcher.h  FilterUtils.h
include/io/: FileReader.h  TargetWriter.h
include/log/: ConsolePrompt.h  Logger.h  PrintTree.h
include/scan/: DiscoveryScanner.h  IgnoreStore.h
include/ui/: Panel.h  Terminal.h
include/ui/panel/: PanelCommon.h
include/ui/terminal/: Ansi.h  Input.h  Platform.h  State.h
include/util/: EncodingUtil.h  PathUtil.h  StringUtil.h  TextFilePolicy.h  Types.h  UnicodeConsole.h
installer/: installer.iss
src/: main.cpp
src/app/: AppRunner.cpp  AppUtils.cpp  CoreRunner.cpp  TemplateRunner.cpp
src/app/coreRunner/: CoreBuildTree.cpp  CoreConfirmer.cpp  CoreInput.cpp  (+10 more)
src/cli/: ArgParser.cpp
src/config/: ConfigColor.cpp  ConfigIgnore.cpp  ConfigIgnoreHelpers.cpp  ConfigParser.cpp  ConfigParserHelpers.cpp  ConfigPublic.cpp  ConfigState.cpp  ConfigWriter.cpp
src/filter/: Filter.cpp  FilterMatcher.cpp  FilterParser.cpp  FilterUtils.cpp
src/io/: FileReader.cpp  TargetWriter.cpp
src/log/: ConsolePrompt.cpp  Logger.cpp  PrintTree.cpp
src/scan/: DiscoveryScanner.cpp  IgnoreStore.cpp
src/ui/: Terminal.cpp
src/util/: EncodingUtil.cpp  PathUtil.cpp  StringUtil.cpp  TextFilePolicy.cpp  UnicodeConsole.cpp
(+9 files in other folders)
